pijama_driver/tests/type_check/pass/functions/fn_from_int_to_int_with_type.pj
fn foo(x: Int): Int do x end
foo
