pijama_driver/tests/type_check/fail/functions/wrong_type_rec_fn.pj
fn foo(x: Int): Unit do
    foo(x)
    10
end
